[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dlou-student-crawler"
version = "0.2.0"
description = "大连海洋大学官网公开信息采集器（纯标准库，仅采集公开内容）"
requires-python = ">=3.10"

[project.scripts]
dlou-crawler = "dlou_crawler.cli:main"

[tool.setuptools.packages.find]
include = ["dlou_crawler*"]
