[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dlou-crawler"
version = "2.0.0"
description = "大连海洋大学官网公开信息采集器"
dependencies = [
    "tkhtmlview>=0.3",
    "Pillow>=11",
]
requires-python = ">=3.10"

[project.scripts]
dlou-crawler = "dlou_crawler.cli:main"

[tool.setuptools.packages.find]
include = ["dlou_crawler*"]
